--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@fontsource/roboto": "^4.5.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
+    "crypto-js": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "recharts": "^2.1.8"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
