--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/roboto": "^4.5.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
+    "cookie": "^0.4.2",
     "crypto-js": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,6 +20,7 @@
     "recharts": "^2.1.8"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/crypto-js": "^4.1.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
