--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/roboto": "^4.5.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
+    "@mui/x-data-grid": "^5.8.0",
     "cookie": "^0.4.2",
     "crypto-js": "^4.1.1",
     "react": "^17.0.2",
