--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-data-grid": "^5.8.0",
     "cookie": "^0.4.2",
     "crypto-js": "^4.1.1",
+    "draft-js": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/cookie": "^0.4.1",
     "@types/crypto-js": "^4.1.1",
+    "@types/draft-js": "^0.11.9",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
