--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
     "@mui/x-data-grid": "^5.8.0",
     "cookie": "^0.4.2",
     "crypto-js": "^4.1.1",
-    "draft-js": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^2.0.0-beta.4",
     "react-router-dom": "^6.3.0",
     "recharts": "^2.1.8"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
     "@types/crypto-js": "^4.1.1",
-    "@types/draft-js": "^0.11.9",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
