--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tira-webserver",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
