--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-quill": "^2.0.0-beta.4",
-    "react-router-dom": "^6.3.0",
-    "recharts": "^2.1.9"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
@@ -28,6 +27,7 @@
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "prettier": "2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.1"
   }
