--- a/resources/default.conf
+++ b/resources/default.conf
@@ -7,7 +7,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass              "http://172.17.0.1:8000/";
+        proxy_pass              "http://tirabackend:8000/";
     }
 
     location / {
