--- a/package.json
+++ b/package.json
@@ -4,31 +4,45 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fontsource/roboto": "^4.5.5",
-    "@mui/icons-material": "^5.6.1",
-    "@mui/material": "^5.6.1",
-    "@mui/x-data-grid": "^5.8.0",
-    "cookie": "^0.5.0",
-    "crypto-js": "^4.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-quill": "^2.0.0-beta.4",
-    "react-router-dom": "^6.3.0"
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "@fontsource/roboto": "4.5.5",
+    "@mui/icons-material": "5.6.1",
+    "@mui/material": "5.6.1",
+    "@mui/x-data-grid": "5.8.0",
+    "cookie": "0.5.0",
+    "crypto-js": "4.1.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-quill": "2.0.0-beta.4",
+    "react-router-dom": "6.3.0"
   },
   "devDependencies": {
-    "@types/cookie": "^0.4.1",
-    "@types/crypto-js": "^4.1.1",
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.3",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@types/cookie": "0.4.1",
+    "@types/crypto-js": "4.1.1",
+    "@types/node": "17.0.23",
+    "@types/react": "18.0.3",
+    "@types/react-dom": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "5.25.0",
+    "@typescript-eslint/parser": "5.25.0",
+    "@vitejs/plugin-react": "1.3.0",
+    "eslint": "8.16.0",
+    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "husky": "8.0.1",
+    "lint-staged": "12.4.1",
     "prettier": "2.6.2",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.1"
+    "typescript": "4.6.3",
+    "vite": "2.9.1"
+  },
+  "lint-staged": {
+    "src/**/*.tsx": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
