--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/parser": "5.25.0",
     "@vitejs/plugin-react": "1.3.0",
     "eslint": "8.16.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.5.0",
     "husky": "8.0.1",
