--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "cookie": "0.5.0",
     "crypto-js": "4.1.1",
     "react": "18.0.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.0.0",
     "react-quill": "2.0.0-beta.4",
-    "react-router-dom": "6.3.0"
+    "react-router-dom": "6.3.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/cookie": "0.4.1",
     "@types/crypto-js": "4.1.1",
     "@types/node": "17.0.23",
     "@types/react": "18.0.3",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "18.0.0",
+    "@types/react-table": "^7.7.12",
     "@typescript-eslint/eslint-plugin": "5.25.0",
     "@typescript-eslint/parser": "5.25.0",
     "@vitejs/plugin-react": "1.3.0",
